<resources>
    <string name="app_name">NoteAndListMemoApp</string>
    <string name="nav_list_name">List</string>
    <string name="nav_settings_name">Settings</string>
    <string name="radiobutton_Subject">Subject</string>
    <string name="radiobutton_Priority">Priority</string>
    <string name="radiobutton_Date">Date</string>
    <string name="textview_RadioGroup_SortBy">Sort By</string>
    <string name="textView_RadioGroup_OrderBy">Order By</string>
    <string name="radioButton_Asc">Ascending</string>
    <string name="radioButton_Desc">Descending</string>
    <string name="priorityHigh">High</string>
    <string name="priorityMed">Medium</string>
    <string name="priorityLow">Low</string>
    <string name="note">Note</string>
    <string name="deleteText">Delete</string>
    <string name="saveText">Save</string>
    <string name="newNoteText">New</string>
</resources>