<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesSettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/noteList_ImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/list_icon" />

        <ImageButton
            android:id="@+id/settings_ImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/settings_icon" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_Settings_Subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultToolbar">

        <TextView
            android:id="@+id/textview_radioGroup_OrderBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_RadioGroup_OrderBy" />

        <RadioButton
            android:id="@+id/radioButton_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Subject" />

        <RadioButton
            android:id="@+id/radioButton_Priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Priority" />

        <RadioButton
            android:id="@+id/radioButton_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Date" />
    </RadioGroup>

    <include
        android:id="@+id/defaultToolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_Settings_Subjects">

        <TextView
            android:id="@+id/textview_RadioGroup_SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_RadioGroup_SortBy" />

        <RadioButton
            android:id="@+id/radioButton_Asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_Asc" />

        <RadioButton
            android:id="@+id/radioButton_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_Desc" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>